Inicio do Projeto

--- a/index.html
+++ b/index.html
@@ -7,8 +7,32 @@
     <title>Mercado</title>
 </head>
 <body>
-    <header></header>
-    <body></body>
+    <header>
+        <div class="up" id="up">
+        <img src="./img/mercado-livre-logo-8.png" alt="">
+        <div class="pesquisar">
+            <input name="" id="pesquisa"></input>
+            <img src="./img/Search.svg" alt="" id="pesquisa-img"></div>
+        </div>
+    </header>
+    <body>
+        <div class="container-produtos" id="container-produtos">
+            <div class="produto1" id="1">
+                <img src="./img/caixa-de-som-jbl-flip-5.png" alt=""></div>
+                <h1>Caixa de Som JBL Flip 5</h1>
+                <p>Caixa de som portátil com Bluetooth, resistente à água e bateria com duração de até 12 horas</p>
+                <h2>499.99</h2>
+            <div class="produto2" id="2"></div>
+            <div class="produto3" id="3"></div>
+            <div class="produto4" id="4"></div>
+            <div class="produto5" id="5"></div>
+            <div class="produto6" id="6"></div>
+            <div class="produto7" id="7"></div>
+            <div class="produto8" id="8"></div>
+            <div class="produto9" id="9"></div>
+            <div class="produto10" id="10"></div>
+        </div>
+    </body>
     <footer></footer>
 </body>
 </html>
