Restruturação do código - HTML - Header parcialmente finalizado

--- a/index.html
+++ b/index.html
@@ -1,38 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Mercado</title>
+    <title>Document</title>
 </head>
 <body>
-    <header>
-        <div class="up" id="up">
-        <img src="./img/mercado-livre-logo-8.png" alt="">
-        <div class="pesquisar">
-            <input name="" id="pesquisa"></input>
-            <img src="./img/Search.svg" alt="" id="pesquisa-img"></div>
+    <div class="menu superior">
+        <button class="mercado_livre_logo">
+            <img src="" alt="mercado_livre_logo">
+        </button>
+        <div class="barra_pesquisa">
+            <input type="text">
+            <button></button>
         </div>
-    </header>
-    <body>
-        <div class="container-produtos" id="container-produtos">
-            <div class="produto1" id="1">
-                <img src="./img/caixa-de-som-jbl-flip-5.png" alt=""></div>
-                <h1>Caixa de Som JBL Flip 5</h1>
-                <p>Caixa de som portátil com Bluetooth, resistente à água e bateria com duração de até 12 horas</p>
-                <h2>499.99</h2>
-            <div class="produto2" id="2"></div>
-            <div class="produto3" id="3"></div>
-            <div class="produto4" id="4"></div>
-            <div class="produto5" id="5"></div>
-            <div class="produto6" id="6"></div>
-            <div class="produto7" id="7"></div>
-            <div class="produto8" id="8"></div>
-            <div class="produto9" id="9"></div>
-            <div class="produto10" id="10"></div>
-        </div>
-    </body>
-    <footer></footer>
+        <button class="meli_logo">
+            <img src="" alt="meli_logo">
+        </button>
+    </div>
+    <div class="menu inferior">
+        <li>
+            <img src="" alt="cep_img">
+            <a href="#cep">Informe seu CEP</a>
+        </li>
+        <li>
+            <a href="#categoria">Categoria</a>
+        </li>
+        <li>
+            <a href="#oferta">Oferta</a>
+        </li>
+        <li>
+            <a href="#cupons">Cupons</a>
+        </li>
+        <li>
+            <a href="#supermercado">Supermercado</a>
+        </li>
+        <li>
+            <a href="#moda">Moda</a>
+        </li>
+        <li>
+            <a href="#mercado_play">Mercado Play</a>
+        </li>
+        <li>
+            <a href="#vender">Vender</a>
+        </li>
+        <li>
+            <a href="#outros">Outros</a>
+        </li>
+        <li>
+            <a href="#criar_conta">Crie a sua conta</a>
+        </li>
+        <li>
+            <a href="#entre">Entre</a>
+        </li>
+        <li>
+            <a href="#compras">Compras</a>
+        </li>
+        <button>
+            <img src="" alt="carrinho">
+        </button>
+    </div>
 </body>
 </html>
