--- a/index.html
+++ b/index.html
@@ -1,64 +1,124 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="menu superior">
-        <button class="mercado_livre_logo">
-            <img src="" alt="mercado_livre_logo">
-        </button>
-        <div class="barra_pesquisa">
-            <input type="text">
-            <button></button>
+    <header>
+        <div class="menu superior">
+            <button class="mercado_livre_logo">
+                <img src="" alt="mercado_livre_logo">
+            </button>
+            <div class="barra_pesquisa">
+                <input type="text">
+                <button></button>
+            </div>
+            <button class="meli_logo">
+                <img src="" alt="meli_logo">
+            </button>
         </div>
-        <button class="meli_logo">
-            <img src="" alt="meli_logo">
-        </button>
-    </div>
-    <div class="menu inferior">
-        <li>
-            <img src="" alt="cep_img">
-            <a href="#cep">Informe seu CEP</a>
-        </li>
-        <li>
-            <a href="#categoria">Categoria</a>
-        </li>
-        <li>
-            <a href="#oferta">Oferta</a>
-        </li>
-        <li>
-            <a href="#cupons">Cupons</a>
-        </li>
-        <li>
-            <a href="#supermercado">Supermercado</a>
-        </li>
-        <li>
-            <a href="#moda">Moda</a>
-        </li>
-        <li>
-            <a href="#mercado_play">Mercado Play</a>
-        </li>
-        <li>
-            <a href="#vender">Vender</a>
-        </li>
-        <li>
-            <a href="#outros">Outros</a>
-        </li>
-        <li>
-            <a href="#criar_conta">Crie a sua conta</a>
-        </li>
-        <li>
-            <a href="#entre">Entre</a>
-        </li>
-        <li>
-            <a href="#compras">Compras</a>
-        </li>
-        <button>
-            <img src="" alt="carrinho">
-        </button>
-    </div>
+        <div class="menu inferior">
+            <li>
+                <img src="" alt="cep_img">
+                <a href="#cep">Informe seu CEP</a>
+            </li>
+            <li>
+                <a href="#categoria">Categoria</a>
+            </li>
+            <li>
+                <a href="#oferta">Oferta</a>
+            </li>
+            <li>
+                <a href="#cupons">Cupons</a>
+            </li>
+            <li>
+                <a href="#supermercado">Supermercado</a>
+            </li>
+            <li>
+                <a href="#moda">Moda</a>
+            </li>
+            <li>
+                <a href="#mercado_play">Mercado Play</a>
+            </li>
+            <li>
+                <a href="#vender">Vender</a>
+            </li>
+            <li>
+                <a href="#outros">Outros</a>
+            </li>
+            <li>
+                <a href="#criar_conta">Crie a sua conta</a>
+            </li>
+            <li>
+                <a href="#entre">Entre</a>
+            </li>
+            <li>
+                <a href="#compras">Compras</a>
+            </li>
+            <button>
+                <img src="" alt="carrinho">
+            </button>
+        </div>
+    </header>
+
+    <main>
+        <div class="carrosel_imagens"></div>
+        <div class="cards_de_atalho">
+            <div class="card_atalho">
+                <li>Entre na sua conta</li>
+                <img src="" alt="imagem_conta">
+                <li>
+                    <a href="#entra_conta">Aproveite ofertas para comprar tudo que quiser.</a>
+                </li>
+                <a href="#entrar_conta">Entrar na sua conta</a>
+            </div>
+             <div class="card_atalho">
+                <li>Entre na sua conta</li>
+                <img src="" alt="imagem_localizacao">
+                <li>
+                    <a href="#informar_localizacao">Confira os custos e prazos de entrega.</a>
+                </li>
+                <a href="#informar_localizacao">Informar localização</a>
+            </div>
+             <div class="card_atalho">
+                <li>Meios de pagamento</li>
+                <img src="" alt="imagem_cartao">
+                <li>
+                    <a href="#mostrar_meios">Pegue suas compras com rapidez e segurança.</a>
+                </li>
+                <a href="#mostrar_meios">Mostrar meios</a>
+            </div>
+             <div class="card_atalho">
+                <li>Menos de R$100</li>
+                <img src="" alt="imagem_dinheiro">
+                <li>
+                    <a href="#mostrar_produtos_baixos">Confira produtos com preços baixos.</a>
+                </li>
+                <a href="#mostrar_produtos_baixos">Mostrar produtos</a>
+            </div>
+             <div class="card_atalho">
+                <li>Mais vendidos</li>
+                <img src="" alt="imagem_bolsa">
+                <li>
+                    <a href="#mostrar_produtos_mais_vendidos">Explore os produtos que são tendência.</a>
+                </li>
+                <a href="#entrar_conta">Entrar na sua conta</a>
+            </div>
+            <div class="card_atalho">
+                <li>Compra garantida</li>
+                <img src="" alt="imagem_compra_caixa">
+                <li>
+                    <a href="#como_funciona">Você pode devolver sua compra grátis.</a>
+                </li>
+                <a href="#como_funciona">Como funciona</a>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
