--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </header>
 
     <main>
-        <div class="carrosel_imagens"></div>
+        <div class="carrossel_imagens"></div>
         <div class="cards_de_atalho">
             <div class="card_atalho">
                 <li>Entre na sua conta</li>
@@ -77,7 +77,7 @@
                 </li>
                 <a href="#entrar_conta">Entrar na sua conta</a>
             </div>
-             <div class="card_atalho">
+            <div class="card_atalho">
                 <li>Entre na sua conta</li>
                 <img src="" alt="imagem_localizacao">
                 <li>
@@ -85,7 +85,7 @@
                 </li>
                 <a href="#informar_localizacao">Informar localização</a>
             </div>
-             <div class="card_atalho">
+            <div class="card_atalho">
                 <li>Meios de pagamento</li>
                 <img src="" alt="imagem_cartao">
                 <li>
@@ -93,7 +93,7 @@
                 </li>
                 <a href="#mostrar_meios">Mostrar meios</a>
             </div>
-             <div class="card_atalho">
+            <div class="card_atalho">
                 <li>Menos de R$100</li>
                 <img src="" alt="imagem_dinheiro">
                 <li>
@@ -101,7 +101,7 @@
                 </li>
                 <a href="#mostrar_produtos_baixos">Mostrar produtos</a>
             </div>
-             <div class="card_atalho">
+            <div class="card_atalho">
                 <li>Mais vendidos</li>
                 <img src="" alt="imagem_bolsa">
                 <li>
@@ -116,6 +116,156 @@
                     <a href="#como_funciona">Você pode devolver sua compra grátis.</a>
                 </li>
                 <a href="#como_funciona">Como funciona</a>
+            </div>
+        </div>
+        <div class="produtos">
+            <div class="oferta_dia">
+                <li>Oferta do dia</li>
+                <img src="" alt="imagem_produto_oferta_dia">
+                <li>
+                    <a href="#produto_oferta"></a>
+                </li>
+                <!--Preço anterior -->
+                <span>R$</span>
+                <!--Preço atual -->
+                <span>R$</span>
+                <!--Desconto -->
+                <li></li>
+                <!--Juros aplicado -->
+                <li></li>
+                <!--Cupom -->
+                <li></li>
+                <!--Frete -->
+                <li></li>
+            </div>
+            <div class="carrossel_ofertas">
+                <li>Ofertas <a href="#mostrar_ofertas">Mostrar todas as ofertas</a></li>
+                <div class="produto_oferta">
+                    <img src="" alt="imagem_produto_oferta">
+                    <li>
+                        <a href="#produto_oferta"></a>
+                    </li>
+                    <!--Preço anterior -->
+                    <span>R$</span>
+                    <!--Preço atual -->
+                    <span>R$</span>
+                    <!--Desconto -->
+                    <li></li>
+                    <!--Juros aplicado -->
+                    <li></li>
+                    <!--Cupom -->
+                    <li></li>
+                    <!--Frete -->
+                    <li></li>
+                </div>
+                <div class="produto_oferta">
+                    <img src="" alt="imagem_produto_oferta">
+                    <li>
+                        <a href="#produto_oferta"></a>
+                    </li>
+                    <!--Preço anterior -->
+                    <span>R$</span>
+                    <!--Preço atual -->
+                    <span>R$</span>
+                    <!--Desconto -->
+                    <li></li>
+                    <!--Juros aplicado -->
+                    <li></li>
+                    <!--Cupom -->
+                    <li></li>
+                    <!--Frete -->
+                    <li></li>
+                </div>
+                <div class="produto_oferta">
+                    <img src="" alt="imagem_produto_oferta">
+                    <li>
+                        <a href="#produto_oferta"></a>
+                    </li>
+                    <!--Preço anterior -->
+                    <span>R$</span>
+                    <!--Preço atual -->
+                    <span>R$</span>
+                    <!--Desconto -->
+                    <li></li>
+                    <!--Juros aplicado -->
+                    <li></li>
+                    <!--Cupom -->
+                    <li></li>
+                    <!--Frete -->
+                    <li></li>
+                </div>
+                <div class="produto_oferta">
+                    <img src="" alt="imagem_produto_oferta">
+                    <li>
+                        <a href="#produto_oferta"></a>
+                    </li>
+                    <!--Preço anterior -->
+                    <span>R$</span>
+                    <!--Preço atual -->
+                    <span>R$</span>
+                    <!--Desconto -->
+                    <li></li>
+                    <!--Juros aplicado -->
+                    <li></li>
+                    <!--Cupom -->
+                    <li></li>
+                    <!--Frete -->
+                    <li></li>
+                </div>
+                <div class="produto_oferta">
+                    <img src="" alt="imagem_produto_oferta">
+                    <li>
+                        <a href="#produto_oferta"></a>
+                    </li>
+                    <!--Preço anterior -->
+                    <span>R$</span>
+                    <!--Preço atual -->
+                    <span>R$</span>
+                    <!--Desconto -->
+                    <li></li>
+                    <!--Juros aplicado -->
+                    <li></li>
+                    <!--Cupom -->
+                    <li></li>
+                    <!--Frete -->
+                    <li></li>
+                </div>
+                <div class="produto_oferta">
+                    <img src="" alt="imagem_produto_oferta">
+                    <li>
+                        <a href="#produto_oferta"></a>
+                    </li>
+                    <!--Preço anterior -->
+                    <span>R$</span>
+                    <!--Preço atual -->
+                    <span>R$</span>
+                    <!--Desconto -->
+                    <li></li>
+                    <!--Juros aplicado -->
+                    <li></li>
+                    <!--Cupom -->
+                    <li></li>
+                    <!--Frete -->
+                    <li></li>
+                </div>
+                <div class="produto_oferta">
+                    <img src="" alt="imagem_produto_oferta">
+                    <li>
+                        <a href="#produto_oferta"></a>
+                    </li>
+                    <!--Preço anterior -->
+                    <span>R$</span>
+                    <!--Preço atual -->
+                    <span>R$</span>
+                    <!--Desconto -->
+                    <li></li>
+                    <!--Juros aplicado -->
+                    <li></li>
+                    <!--Cupom -->
+                    <li></li>
+                    <!--Frete -->
+                    <li></li>
+                </div>
             </div>
         </div>
     </main>
