--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="menu superior">
             <button class="mercado_livre_logo">
-                <img src="" alt="mercado_livre_logo">
+                <img src="./img/mercado-livre-logo-8.png" alt="mercado_livre_logo">
             </button>
             <div class="barra_pesquisa">
                 <input type="text">
@@ -24,7 +24,7 @@
         </div>
         <div class="menu inferior">
             <li>
-                <img src="" alt="cep_img">
+                <img src="./img/localization.svg" alt="cep_img">
                 <a href="#cep">Informe seu CEP</a>
             </li>
             <li>
@@ -61,7 +61,7 @@
                 <a href="#compras">Compras</a>
             </li>
             <button>
-                <img src="" alt="carrinho">
+                <img src="./img/carrinho.svg" alt="carrinho">
             </button>
         </div>
     </header>
