--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 
 <body>
     <header>
-        <div class="menu superior">
+        <div class="menu_superior">
             <button class="mercado_livre_logo">
                 <img src="./img/mercado-livre-logo-8.png" alt="mercado_livre_logo">
             </button>
             <div class="barra_pesquisa">
-                <input type="text">
-                <button></button>
+                <input type="text" placeholder="Buscar produtos, marcas e muito mais...">
+                <button class="pesquisa">
+                    <img src="./img/Search.svg" alt="imagem_pesquisa">
+                </button>
             </div>
             <button class="meli_logo">
-                <img src="" alt="meli_logo">
+                <img src="./img/meli_logo.png" alt="meli_logo">
             </button>
         </div>
-        <div class="menu inferior">
+        <div class="menu_inferior">
             <li>
                 <img src="./img/localization.svg" alt="cep_img">
                 <a href="#cep">Informe seu CEP</a>
