Modificações no menu inferior no CSS

--- a/index.html
+++ b/index.html
@@ -25,51 +25,62 @@
             </button>
         </div>
         <div class="menu_inferior">
-            <li>
+            <li class="cep">
+                <button>
                 <img src="./img/localization.svg" alt="cep_img">
-                <a href="#cep">Informe seu CEP</a>
-            </li>
-            <li>
-                <a href="#categoria">Categoria</a>
-            </li>
-            <li>
-                <a href="#oferta">Oferta</a>
-            </li>
-            <li>
-                <a href="#cupons">Cupons</a>
-            </li>
-            <li>
-                <a href="#supermercado">Supermercado</a>
-            </li>
-            <li>
-                <a href="#moda">Moda</a>
-            </li>
-            <li>
-                <a href="#mercado_play">Mercado Play</a>
-            </li>
-            <li>
-                <a href="#vender">Vender</a>
-            </li>
-            <li>
-                <a href="#outros">Outros</a>
-            </li>
-            <li>
-                <a href="#criar_conta">Crie a sua conta</a>
-            </li>
-            <li>
-                <a href="#entre">Entre</a>
-            </li>
-            <li>
-                <a href="#compras">Compras</a>
-            </li>
-            <button>
-                <img src="./img/carrinho.svg" alt="carrinho">
+                <a href="#cep">Informe seu <span>CEP</span></a>
             </button>
-        </div>
+            </li>
+            <div class="metade_menu_inferior">
+                <li>
+                    <a href="#categoria">Categoria</a>
+                </li>
+                <li>
+                    <a href="#oferta">Oferta</a>
+                </li>
+                <li>
+                    <a href="#cupons">Cupons</a>
+                </li>
+                <li>
+                    <a href="#supermercado">Supermercado</a>
+                </li>
+                <li>
+                    <a href="#moda">Moda</a>
+                </li>
+                <li>
+                    <a href="#mercado_play">Mercado Play</a>
+                </li>
+                <li>
+                    <a href="#vender">Vender</a>
+                </li>
+                <li>
+                    <a href="#contato">Contato</a>
+                </li>
+            </div>
+                    <div class="segunda_metade_menu_inferior">
+                        <li>
+                            <a href="#outros">Outros</a>
+                        </li>
+                        <li>
+                            <a href="#criar_conta">Crie a sua conta</a>
+                        </li>
+                        <li>
+                            <a href="#entre">Entre</a>
+                        </li>
+                        <li>
+                            <a href="#compras">Compras</a>
+                        </li>
+                        <button class="carrinho">
+                            <img src="./img/carrinho.svg" alt="carrinho">
+                        </button>
+                    </div>
+                </div>
     </header>
 
     <main>
-        <div class="carrossel_imagens"></div>
+        <div class="carrossel_imagens">
+            <img src="./img/propaganda-1.png" alt="">
+        </div>
         <div class="cards_de_atalho">
             <div class="card_atalho">
                 <li>Entre na sua conta</li>
