Adicionado elementos de navegação no Html e definido cor dos textos do body

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Mercado Livre</title>
 </head>
 
 <body>
     <header>
-        <nav>
+        <nav class="nav-mercado">
             <a href="">Logo</a>
             <input type="text" placeholder="Buscar produtos marcas e muitos mais...">
             <div class="Anuncio"></div>
@@ -19,6 +20,10 @@
                 <li><a href="">Ofertas</a></li>
                 <li><a href="">Cupons</a></li>
                 <li><a href="">Supermercado</a></li>
+                <li><a href="">Moda</a></li>
+                <li><a href="">Mercado Play</a></li>
+                <li><a href="">Vender</a></li>
+                <li><a href="">Contato</a></li>
                 <li><a href="">Crie sua conta</a></li>
                 <li><a href="">Entre</a></li>
                 <li><a href="">Compras</a></li>
