Modificado nav-mercado, criado nav-items, modificado css

--- a/index.html
+++ b/index.html
@@ -11,11 +11,24 @@
 <body>
     <header>
         <nav class="nav-mercado">
-            <a href="">Logo</a>
-            <input type="text" placeholder="Buscar produtos marcas e muitos mais...">
-            <div class="Anuncio"></div>
-            <ul>
-                <li><a href="">Cep</a></li>
+            <button class="logo-mercado">
+                <img src="./img/logo-mercado.png" alt="">
+            </button>
+            <div class="search">
+                <input type="text" placeholder="Buscar produtos marcas e muitos mais...">
+                <button>
+                    <img src="./img/Search.svg" alt="">
+                </button>
+            </div>
+            <button class="anuncio"><img src="./img/meli_logo.png" alt=""></button>
+            <ul class="nav-items">
+                <button>
+                    <img src="./img/localization.svg" alt="">
+                    <li>
+                        <a href="">Informe seu</a>
+                        <a href="">CEP</a>
+                    </li>
+                </button>
                 <li><a href="">Categoria</a></li>
                 <li><a href="">Ofertas</a></li>
                 <li><a href="">Cupons</a></li>
