--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a href="">CEP</a>
                     </li>
                 </button>
-                <li><a href="">Categoria</a></li>
+                <li><a href="">Categorias</a></li>
                 <li><a href="">Ofertas</a></li>
                 <li><a href="">Cupons</a></li>
                 <li><a href="">Supermercado</a></li>
