Parcialmente finalizado Header

--- a/index.html
+++ b/index.html
@@ -29,7 +29,34 @@
                         <a href="">CEP</a>
                     </li>
                 </button>
-                <li><a href="">Categorias</a></li>
+                <li><a href="">Categorias <img src="./img/expand-arrow.svg" alt="">
+                        <div class="dropdown-content">
+                            <div class="triangulo-dropdown"></div>
+                            <a href="#">Veículos</a>
+                            <a href="#">Supermercado</a>
+                            <a href="#">Tecnologia</a>
+                            <a href="#">Casa e Móveis</a>
+                            <a href="#">Eletrodomésticos</a>
+                            <a href="#">Esportes e Fitness</a>
+                            <a href="#">Ferramentas</a>
+                            <a href="#">Construção</a>
+                            <a href="#">Indústria e Comércio</a>
+                            <a href="#">Para o seu Negócio</a>
+                            <a href="#">Pet Shop</a>
+                            <a href="#">Saúde</a>
+                            <a href="#">Acessórios para Veículos</a>
+                            <a href="#">Beleza e Cuidado Pessoal</a>
+                            <a href="#">Moda</a>
+                            <a href="#">Bebês</a>
+                            <a href="#">Brinquedos</a>
+                            <a href="#">Imóveis</a>
+                            <a href="#">Compra Internacional</a>
+                            <a href="#">Produtos Sustentáveis</a>
+                            <a href="#">Mais vendidos</a>
+                            <a href="#">Lojas oficiais</a>
+                            <a href="#">Ver mais categorias</a>
+                        </div>
+                    </a></li>
                 <li><a href="">Ofertas</a></li>
                 <li><a href="">Cupons</a></li>
                 <li><a href="">Supermercado</a></li>
@@ -40,6 +67,7 @@
                 <li><a href="">Crie sua conta</a></li>
                 <li><a href="">Entre</a></li>
                 <li><a href="">Compras</a></li>
+                <a><img src="./img/shopping-cart.svg" alt=""></a>
             </ul>
         </nav>
     </header>
