Parcialmente finalizado carrossel de propagandas e iniciado a criação de cards de atalho

--- a/index.html
+++ b/index.html
@@ -71,6 +71,66 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="carrossel-anuncios">
+            <button class="button_carrossel_1">
+                <div class="arrow_button_1"><</div>
+                <div class="quad_button_1"></div>
+            </button>
+            <button class="button_carrossel_2">
+                <div class="arrow_button_2">></div>
+                <div class="quad_button_2"></div>
+            </button>
+            <div class="indicators">
+                <div class="indicador"></div>
+                <div class="indicador"></div>
+                <div class="indicador"></div>
+                <div class="indicador"></div>
+                <div class="indicador"></div>
+            </div>
+            <div class="color-gradient"></div>
+        </div>
+        <div class="nav-cards">
+            <div class="card-info">
+                <li><a href="">Entre na conta</a></li>
+                <img src="" alt="">
+                <li><a href="">Aproveite ofertas para comprar tudo que quiser</a></li>
+                <li><a href="">Mostrar produtos</a></li>
+            </div>
+            <div class="card-info">
+                <li><a href="">Entre na conta</a></li>
+                <img src="" alt="">
+                <li><a href="">Aproveite ofertas para comprar tudo que quiser</a></li>
+                <li><a href="">Mostrar produtos</a></li>
+            </div>
+            <div class="card-info">
+                <li><a href="">Entre na conta</a></li>
+                <img src="" alt="">
+                <li><a href="">Aproveite ofertas para comprar tudo que quiser</a></li>
+                <li><a href="">Mostrar produtos</a></li>
+            </div>
+            <div class="card-info">
+                <li><a href="">Entre na conta</a></li>
+                <img src="" alt="">
+                <li><a href="">Aproveite ofertas para comprar tudo que quiser</a></li>
+                <li><a href="">Mostrar produtos</a></li>
+            </div>
+            <div class="card-info">
+                <li><a href="">Entre na conta</a></li>
+                <img src="" alt="">
+                <li><a href="">Aproveite ofertas para comprar tudo que quiser</a></li>
+                <li><a href="">Mostrar produtos</a></li>
+            </div>
+            <div class="card-info">
+                <li><a href="#">Entre na sua conta</a></li>
+                <img src="" alt="">
+                <li><a href="#">Aproveite ofertas para comprar tudo que quiser</a></li>
+                <li><a href="">Mostrar produtos</a></li>
+            </div>
+        </div>
+
+       
+    </main>
 </body>
 
 </html>
