card-info parcialmente finalizado

--- a/index.html
+++ b/index.html
@@ -92,40 +92,40 @@
         </div>
         <div class="nav-cards">
             <div class="card-info">
-                <li><a href="">Entre na conta</a></li>
+                <li><a href="">Entre na sua conta</a></li>
                 <img src="" alt="">
-                <li><a href="">Aproveite ofertas para comprar tudo que quiser</a></li>
+                <li><a href="">Aproveite ofertas para comprar tudo que quiser.</a></li>
+                <li><a href="">Entrar na sua conta</a></li>
+            </div>
+            <div class="card-info">
+                <li><a href="">Insira sua Localização</a></li>
+                <img src="" alt="">
+                <li><a href="">Confira os custos e prazos de entrega.</a></li>
+                <li><a href="">Informar Localização</a></li>
+            </div>
+            <div class="card-info">
+                <li><a href="">Meios de pagamento</a></li>
+                <img src="" alt="">
+                <li><a href="">Pegue suas compras com rapidez e segurança.</a></li>
+                <li><a href="">Mostrar meios</a></li>
+            </div>
+            <div class="card-info">
+                <li><a href="">Menos de <a href="">R$100</a></a></li>
+                <img src="" alt="">
+                <li><a href="">Aproveite ofertas para comprar tudo que quiser.</a></li>
                 <li><a href="">Mostrar produtos</a></li>
             </div>
             <div class="card-info">
-                <li><a href="">Entre na conta</a></li>
+                <li><a href="">Mais vendidos</a></li>
                 <img src="" alt="">
-                <li><a href="">Aproveite ofertas para comprar tudo que quiser</a></li>
-                <li><a href="">Mostrar produtos</a></li>
+                <li><a href="">Explore os produtos que são tendência.</a></li>
+                <li><a href="">Ir para mais vendidos</a></li>
             </div>
             <div class="card-info">
-                <li><a href="">Entre na conta</a></li>
+                <li><a href="#">Compra garantida</a></li>
                 <img src="" alt="">
-                <li><a href="">Aproveite ofertas para comprar tudo que quiser</a></li>
-                <li><a href="">Mostrar produtos</a></li>
-            </div>
-            <div class="card-info">
-                <li><a href="">Entre na conta</a></li>
-                <img src="" alt="">
-                <li><a href="">Aproveite ofertas para comprar tudo que quiser</a></li>
-                <li><a href="">Mostrar produtos</a></li>
-            </div>
-            <div class="card-info">
-                <li><a href="">Entre na conta</a></li>
-                <img src="" alt="">
-                <li><a href="">Aproveite ofertas para comprar tudo que quiser</a></li>
-                <li><a href="">Mostrar produtos</a></li>
-            </div>
-            <div class="card-info">
-                <li><a href="#">Entre na sua conta</a></li>
-                <img src="" alt="">
-                <li><a href="#">Aproveite ofertas para comprar tudo que quiser</a></li>
-                <li><a href="">Mostrar produtos</a></li>
+                <li><a href="#">Você pode devolver sua compra grátis.</a></li>
+                <li><a href="">Como funciona</a></li>
             </div>
         </div>
 
