--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <li>
                         <a href="#produto_oferta">Caixa de Som JBL Flip 5</a>
                     </li>
-                    
+
                     <!--Preço atual -->
                     <span>R$499<li>99</li></span>
                     <li>
@@ -152,64 +152,78 @@
                                 <div class="triangule-star-first"></div>
                                 <div class="triangule-star-second"></div>
                                 <div class="triangule-star-third"></div>
+                                <div class="star-item-off">
+                                    <div class="star-white-item">
+                                        <div class="triangule-star-first-off"></div>
+                                        <div class="triangule-star-second-off"></div>
+                                        <div class="triangule-star-third-off"></div>
+                                    </div>
+                                </div>
                             </div>
-                             <div class="star-item">
+                            <div class="star-item">
                                 <div class="triangule-star-first"></div>
                                 <div class="triangule-star-second"></div>
                                 <div class="triangule-star-third"></div>
+                                <div class="star-item-off">
+                                    <div class="star-white-item">
+                                        <div class="triangule-star-first-off"></div>
+                                        <div class="triangule-star-second-off"></div>
+                                        <div class="triangule-star-third-off"></div>
+                                    </div>
+                                </div>
                             </div>
-                             <div class="star-item">
+                            <div class="star-item">
                                 <div class="triangule-star-first"></div>
                                 <div class="triangule-star-second"></div>
                                 <div class="triangule-star-third"></div>
+                                <div class="star-item-off">
+                                    <div class="star-white-item">
+                                        <div class="triangule-star-first-off"></div>
+                                        <div class="triangule-star-second-off"></div>
+                                        <div class="triangule-star-third-off"></div>
+                                    </div>
+                                </div>
                             </div>
-                             <div class="star-item">
+                            <div class="star-item">
                                 <div class="triangule-star-first"></div>
                                 <div class="triangule-star-second"></div>
                                 <div class="triangule-star-third"></div>
+                                <div class="star-item-off">
+                                    <div class="star-white-item">
+                                        <div class="triangule-star-first-off"></div>
+                                        <div class="triangule-star-second-off"></div>
+                                        <div class="triangule-star-third-off"></div>
+                                    </div>
+                                </div>
                             </div>
-                             <div class="star-item">
+                            <div class="star-item">
                                 <div class="triangule-star-first"></div>
                                 <div class="triangule-star-second"></div>
                                 <div class="triangule-star-third"></div>
+                                <div class="star-item-off">
+                                    <div class="star-white-item">
+                                        <div class="triangule-star-first-off"></div>
+                                        <div class="triangule-star-second-off"></div>
+                                        <div class="triangule-star-third-off"></div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="star-item-off">
-                                <div class="star-white-item">
-                                <div class="triangule-star-first-off"></div>
-                                <div class="triangule-star-second-off"></div>
-                                <div class="triangule-star-third-off"></div>
+                            <div class="star-item">
+                                <div class="triangule-star-first"></div>
+                                <div class="triangule-star-second"></div>
+                                <div class="triangule-star-third"></div>
+                                <div class="star-item-off">
+                                    <div class="star-white-item">
+                                        <div class="triangule-star-first-off"></div>
+                                        <div class="triangule-star-second-off"></div>
+                                        <div class="triangule-star-third-off"></div>
+                                    </div>
+                                </div>
                             </div>
-                            </div>
-                            <div class="star-item-off">
-                                <div class="star-white-item">
-                                <div class="triangule-star-first-off"></div>
-                                <div class="triangule-star-second-off"></div>
-                                <div class="triangule-star-third-off"></div>
-                            </div>
-                            </div>
-                            <div class="star-item-off">
-                                <div class="star-white-item">
-                                <div class="triangule-star-first-off"></div>
-                                <div class="triangule-star-second-off"></div>
-                                <div class="triangule-star-third-off"></div>
-                            </div>
-                            </div>
-                            <div class="star-item-off">
-                                <div class="star-white-item">
-                                <div class="triangule-star-first-off"></div>
-                                <div class="triangule-star-second-off"></div>
-                                <div class="triangule-star-third-off"></div>
-                            </div>
-                            </div>
-                            <div class="star-item-off">
-                                <div class="star-white-item">
-                                <div class="triangule-star-first-off"></div>
-                                <div class="triangule-star-second-off"></div>
-                                <div class="triangule-star-third-off"></div>
-                            </div>
-                            </div>
-                        </div></h1>
-                    
+
+                        </div>
+                    </h1>
+
                 </div>
             </div>
         </div>
